Fixing preview button alignment issue on smaller screens. Closes #104

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -934,7 +934,7 @@ a.slink{
 }
 
 .comment-form button{
-  margin-top: .2em;
+  margin-top: .7em;
 }
 
 .alertbox{
